--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,6 +9,14 @@
     <h1 class="govuk-heading-xl">
       {{ serviceName }}
     </h1>
+    <h2 class="govuk-heading-m">v13</h2>
+    <p><a class="govuk-link" href="/13/verification-report/index.html">Prototype</a></p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>
+        <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3641">
+          Increment the prototype.</a></p>
+      </li>
+    </ul>
     <h2 class="govuk-heading-m">v12</h2>
       <p><a class="govuk-link" href="/12/verification-report/index.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
