--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,10 @@
     <p><a class="govuk-link" href="/13/verification-report/index.html">Prototype</a></p>
     <ul class="govuk-list govuk-list--bullet">
       <li>
+        <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3640">
+          Update crown logo.</a></p>
+      </li>
+      <li>
         <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3641">
           Increment the prototype.</a></p>
       </li>
