--- a/app/views/13/verification-report/essential-information.html
+++ b/app/views/13/verification-report/essential-information.html
@@ -74,7 +74,7 @@
                           <div class="govuk-grid-column-two-thirds">
                             <h3 class="govuk-heading-s">{{data['other-address-description']}}</h3>
                           </div>
-                          <div class="govuk-grid-column-one-third">
+                          <div class="govuk-grid-column-one-third moj-ticket-panel__links">
                             <a href="addresses/add-address.html?addEditAddress=Edit" class="govuk-link" style="font-weight: normal;">
                               Edit</a> |
                             <a href="addresses/delete-address" class="govuk-link" style="font-weight: normal;">
@@ -101,7 +101,7 @@
                           <div class="govuk-grid-column-two-thirds">
                             <h3 class="govuk-heading-s">Parent's address</h3>
                           </div>
-                          <div class="govuk-grid-column-one-third">
+                          <div class="govuk-grid-column-one-third moj-ticket-panel__links">
                             <a href="addresses/add-address.html?addEditAddress=Edit" class="govuk-link" style="font-weight: normal;">
                               Edit</a> |
                             <a href="addresses/delete-address" class="govuk-link" style="font-weight: normal;">
@@ -123,7 +123,7 @@
                         <div class="govuk-grid-column-two-thirds">
                           <h3 class="govuk-heading-s">Friend's address</h3>
                         </div>
-                        <div class="govuk-grid-column-one-third">
+                        <div class="govuk-grid-column-one-third moj-ticket-panel__links">
                           <a href="addresses/add-address.html?addEditAddress=Edit" class="govuk-link" style="font-weight: normal;">
                             Edit</a> |
                           <a href="addresses/delete-address" class="govuk-link" style="font-weight: normal;">
