Add in preview report page
- Side nav links to preview page
- routes includes preview report page

--- a/app/views/13/verification-report/preview-report.html
+++ b/app/views/13/verification-report/preview-report.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Check answers" %}
+{% set pageName="Preview report" %}
 
 {% block content %}
   <div class="app-split-pane app-width-container">
@@ -32,11 +32,11 @@
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="suitability-decision">
                 Suitability decision</a>
             </li>
-            <li class="app-subnav__section-item app-subnav__section-item--current">
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="check-answers">
                 Check your answers</a>
             </li>
-            <li class="app-subnav__section-item">
+            <li class="app-subnav__section-item app-subnav__section-item--current">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="preview-report">
                 Preview report</a>
             </li>
