--- a/app/views/13/verification-report/unpaid-work.html
+++ b/app/views/13/verification-report/unpaid-work.html
@@ -37,6 +37,10 @@
                 Check your answers</a>
             </li>
             <li class="app-subnav__section-item">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="preview-report">
+                Preview report</a>
+            </li>
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="sign-your-report">
                 Sign your report</a>
             </li>
