--- a/app/views/13/verification-report/offences.html
+++ b/app/views/13/verification-report/offences.html
@@ -176,7 +176,7 @@
                         <h3 class="govuk-heading-s">{{data['other-offence-description']}}</h3>
                       </div>
                       <div class="govuk-grid-column-one-third moj-ticket-panel__links">
-                        <a href="addresses/add-address.html?addEditAddress=Edit" class="govuk-link" style="font-weight: normal;">
+                        <a href="offences/add-offence.html?addEditOffence=Edit" class="govuk-link" style="font-weight: normal;">
                           Edit</a> |
                         <a href="offences/delete-offence.html" class="govuk-link" style="font-weight: normal;">
                           Delete</a>
