Index allows navigation to both kinds of reports.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,7 +10,10 @@
       {{ serviceName }}
     </h1>
     <h2 class="govuk-heading-m">v14</h2>
-    <p><a class="govuk-link" href="/14/verification-report/index.html">Prototype</a></p>
+    <p><a class="govuk-link" href="/14/verification-report/index.html">
+      Verification report prototype</a> |
+      <a class="govuk-link" href="/14/pre-sentence-report/index.html">
+      Pre-sentence report prototype</a></p>
     <ul class="govuk-list govuk-list--bullet">
       <li>
         <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3767">
