--- a/app/views/14/verification-report/confirmation.html
+++ b/app/views/14/verification-report/confirmation.html
@@ -9,7 +9,7 @@
         <div class="govuk-grid-column-two-thirds">
           <div class="govuk-panel govuk-panel--confirmation ">
             <h1 class="govuk-panel__title">
-              Report published
+              Verification report published
             </h1>
             <div class="govuk-panel__body">
               Dylan Adam Armstrong<br/>
