Can check identity and add other addresses
Defendant details shows information to confirm
the defendant's identity.

Also move add other addresses here.

--- a/app/views/15/pre-sentence-report/addresses/add-address.html
+++ b/app/views/15/pre-sentence-report/addresses/add-address.html
@@ -22,13 +22,13 @@
                 <label class="govuk-label" for="other-address-description">
                   Address description
                 </label>
-                <input class="govuk-input govuk-input--width-20"" id="other-address-description" name="other-address-description" type="text" autocomplete="off" value="{{data['other-address-description']}}">
+                <input class="govuk-input govuk-input--width-20"" id="other-address-description" name="other-address-description" type="text" autocomplete="off" value="{{data['other-address-description'] | default('Partner\'s address')}}">
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="other-address-line-1">
                   Address line 1
                 </label>
-                <input class="govuk-input govuk-input--width-30" id="other-address-line-1" name="other-address-line-1" type="text" autocomplete="off" value="{{data['other-address-line-1']}}">
+                <input class="govuk-input govuk-input--width-30" id="other-address-line-1" name="other-address-line-1" type="text" autocomplete="off" value="{{data['other-address-line-1'] | default('19 Thorne Avenue')}}">
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="address-line-2">
@@ -40,19 +40,19 @@
                 <label class="govuk-label" for="other-address-town">
                   Town or city
                 </label>
-                <input class="govuk-input govuk-input--width-20" id="other-address-town" name="other-address-town" autocomplete="off" type="text" value="{{data['other-address-town']}}">
+                <input class="govuk-input govuk-input--width-20" id="other-address-town" name="other-address-town" autocomplete="off" type="text" value="{{data['other-address-town'] | default('Wissendine')}}">
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="address-county">
                   County (optional)
                 </label>
-                <input class="govuk-input govuk-input--width-20" id="other-address-county" name="other-address-county" autocomplete="off" type="text" value="{{data['other-address-county']}}">
+                <input class="govuk-input govuk-input--width-20" id="other-address-county" name="other-address-county" autocomplete="off" type="text" value="{{data['other-address-county'] | default('East Borsham')}}">
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="other-address-postcode">
                   Postcode
                 </label>
-                <input class="govuk-input govuk-input--width-10" id="other-address-postcode" name="other-address-postcode" type="text" autocomplete="off" value="{{data['other-address-postcode']}}">
+                <input class="govuk-input govuk-input--width-10" id="other-address-postcode" name="other-address-postcode" type="text" autocomplete="off" value="{{data['other-address-postcode'] | default('EA1 7ET')}}">
               </div>
             </fieldset>
           </div>
@@ -60,7 +60,7 @@
             <button class="govuk-button" data-module="govuk-button">
               Save and return
             </button>
-            <a href="../essential-information" class="govuk-link" style="font-weight: normal;">Cancel</a>
+            <a href="../defendant-details" class="govuk-link" style="font-weight: normal;">Cancel</a>
           </div>
         </form>
       </main>
