--- a/app/views/15/pre-sentence-report/defendant-details.html
+++ b/app/views/15/pre-sentence-report/defendant-details.html
@@ -122,6 +122,98 @@
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
+            <fieldset class="govuk-fieldset">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                <h2 class="govuk-fieldset__heading">Other addresses</h2>
+              </legend>
+              <div id="changedName-hint" class="govuk-hint">
+                Record any other addresses that the defendant spends a
+                significant amount of time at. These will be used as part of any
+                domestic abuse and safeguarding checks.
+              </div>
+              {% if (data['other-address-description']) %}
+                <div class="moj-ticket-panel-container">
+                  <article class="moj-ticket-panel" aria-label="Other address 1">
+                    <section class="moj-ticket-panel__content moj-ticket-panel__content--blue" aria-label="Section 1">
+                        <div class="govuk-grid-row govuk-!-margin-bottom-3">
+                          <div class="govuk-grid-column-two-thirds">
+                            <h3 class="govuk-heading-s">{{data['other-address-description']}}</h3>
+                          </div>
+                          <div class="govuk-grid-column-one-third moj-ticket-panel__links">
+                            <a href="addresses/add-address.html?addEditAddress=Edit" class="govuk-link" style="font-weight: normal;">
+                              Edit</a> |
+                            <a href="addresses/delete-address" class="govuk-link" style="font-weight: normal;">
+                              Delete</a>
+                          </div>
+                        </div>
+                        <p class="govuk-body">
+                          {{data['other-address-line-1']}}<br />
+                          {% if (data['other-address-line-2']) %}
+                          {{data['other-address-line-2']}}<br />
+                          {% endif %}
+                          {{data['other-address-town']}}<br />
+                          {% if (data['other-address-county']) %}
+                          {{data['other-address-county']}}<br />
+                          {% endif %}
+                          {{data['other-address-postcode']}}
+                        </p>
+                    </section>
+                  </article>
+                  {% if (data['parentsAddressVisible'] === 'true') %}
+                    <article class="moj-ticket-panel" aria-label="Other address 2">
+                      <section class="moj-ticket-panel__content moj-ticket-panel__content--blue" aria-label="Section 1">
+                        <div class="govuk-grid-row govuk-!-margin-bottom-3">
+                          <div class="govuk-grid-column-two-thirds">
+                            <h3 class="govuk-heading-s">Parent's address</h3>
+                          </div>
+                          <div class="govuk-grid-column-one-third moj-ticket-panel__links">
+                            <a href="addresses/add-address.html?addEditAddress=Edit" class="govuk-link" style="font-weight: normal;">
+                              Edit</a> |
+                            <a href="addresses/delete-address" class="govuk-link" style="font-weight: normal;">
+                              Delete</a>
+                          </div>
+                        </div>
+                        <p class="govuk-body">
+                          111b Baker Street<br />
+                          Fauxsham<br />
+                          Bedfordshire<br />
+                          BY1 8UT
+                        </p>
+                      </section>
+                    </article>
+                  {% endif %}
+                  <article class="moj-ticket-panel" aria-label="Other address 3">
+                    <section class="moj-ticket-panel__content moj-ticket-panel__content--blue" aria-label="Section 1">
+                      <div class="govuk-grid-row govuk-!-margin-bottom-3">
+                        <div class="govuk-grid-column-two-thirds">
+                          <h3 class="govuk-heading-s">Friend's address</h3>
+                        </div>
+                        <div class="govuk-grid-column-one-third moj-ticket-panel__links">
+                          <a href="addresses/add-address.html?addEditAddress=Edit" class="govuk-link" style="font-weight: normal;">
+                            Edit</a> |
+                          <a href="addresses/delete-address" class="govuk-link" style="font-weight: normal;">
+                            Delete</a>
+                        </div>
+                      </div>
+                      <p class="govuk-body">
+                        257b North Southstreet<br />
+                        Loughborough<br />
+                        Leicestershire<br />
+                        LE12 3RT
+                      </p>
+                    </section>
+                  </article>
+                </div>
+              {% endif %}
+            </fieldset>
+            <div class="govuk-button-group">
+              <button class="govuk-button govuk-button--secondary" data-module="govuk-button" name="pageAction" value="addAddress">
+                Add address
+              </button>
+            </div>
+          </div>
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+          <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" role="group" aria-describedby="date-of-birth-hint">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                 <h2 class="govuk-fieldset__heading">
