--- a/app/views/15/pre-sentence-report/electronic-monitoring-for-curfew.html
+++ b/app/views/15/pre-sentence-report/electronic-monitoring-for-curfew.html
@@ -16,6 +16,10 @@
                 Offences</a>
             </li>
             <li class="app-subnav__section-item">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="victim-impact-assessment">
+                Victim impact assessment</a>
+            </li>
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="essential-information">
                 Essential information</a>
             </li>
