--- a/app/views/15/pre-sentence-report/publish-report.html
+++ b/app/views/15/pre-sentence-report/publish-report.html
@@ -21,6 +21,10 @@
                 Essential information</a>
             </li>
             <li class="app-subnav__section-item">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="victim-impact-assessment">
+                Victim impact assessment</a>
+            </li>
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">
                 Suitability for unpaid work</a>
             </li>
