--- a/app/views/15/pre-sentence-report/victim-impact-assessment.html
+++ b/app/views/15/pre-sentence-report/victim-impact-assessment.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Sign your report" %}
+{% set pageName="Victim impact assessment" %}
 
 {% block content %}
   <div class="app-split-pane app-width-container">
@@ -16,7 +16,7 @@
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offences">
                 Offences</a>
             </li>
-            <li class="app-subnav__section-item">
+            <li class="app-subnav__section-item app-subnav__section-item--current">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="victim-impact-assessment">
                 Victim impact assessment</a>
             </li>
@@ -40,7 +40,7 @@
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="preview-report">
                 Preview report</a>
             </li>
-            <li class="app-subnav__section-item app-subnav__section-item--current">
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="sign-your-report">
                 Sign your report</a>
             </li>
@@ -53,15 +53,53 @@
     </div>
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
-        <form action="sign-your-report" method="post" novalidate>
+        <form action="victim-impact-assessment" method="post" novalidate>
           <div class="govuk-form-group">
             <span class="govuk-caption-xl">
               Dylan Adam Armstrong CRN: E234516
             </span>
             <h1 class="govuk-heading-xl">
-              Sign your report
+              Victim impact assessment
             </h1>
-            <input class="govuk-input govuk-input--width-20" id="assessor-signature" name="assessor-signature" type="assessor-signature" value="{{data['assessor-signature']}}">
+            <p class="govuk-body">
+              The victim impact statement should be included as part of the CPS
+              pack.</p>
+            <p class="govuk-body">
+              <a class="govuk-link" href="#">
+                <svg class="moj-timeline__document-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 20" width="20" height="16">
+                  <path fill="#1d70b8" d="M9 7V1.5L14.5 7H9zM2 0C.9 0 0 .9 0 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6l-6-6H2z" />
+                </svg>
+                CPS pack
+              </a>
+            </p>
+            <details class="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                  Help with victim impact assessment
+                </span>
+              </summary>
+              <div class="govuk-details__text">
+                <p class="govuk-body">
+                  Summarise the information here so that it can be used to
+                  inform sentencing options later in the report. This may
+                  include things like exclusion zones and can feed into the
+                  risk of serious harm.</p>
+                <p class="govuk-body">
+                  Do not simply restate the facts from the CPS report, or rely
+                  solely on the account provided in the pre-sentence report
+                  interview.</p>
+                <p class="govuk-body">
+                  You may want to consider the defendant's:
+                </p>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li>attitudes</li>
+                  <li>responsibility</li>
+                  <li>circumstances</li>
+                  <li>motivations</li>
+                </ul>
+              </div>
+            </details>
+            <textarea class="govuk-textarea" id="victim-impact-assessment" name="victim-impact-assessment" rows="10" aria-describedby="victim-impact-assessment-hint">{{data['victim-impact-assessment']}}</textarea>
           </div>
           <div class="govuk-button-group">
             <button class="govuk-button" data-module="govuk-button">
