Squash this in with adding victim impact assessment
One page was missing the the link

--- a/app/views/15/pre-sentence-report/offences.html
+++ b/app/views/15/pre-sentence-report/offences.html
@@ -15,6 +15,9 @@
             <li class="app-subnav__section-item app-subnav__section-item--current">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offences">
                 Offences</a>
+            </li><li class="app-subnav__section-item">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="victim-impact-assessment">
+                Victim impact assessment</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="essential-information">
