Add in culpability and risk page
- SASS for secondary info on right side
- add in page
- set routing and form

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -10,6 +10,7 @@
 @import "components/report-preview";
 @import "components/split-pane";
 @import "components/subnav";
+@import "components/supporting-information";
 @import "components/ticket-panel";
 @import "components/move-button";
 
