--- a/app/views/15/pre-sentence-report/electronic-monitoring-for-curfew.html
+++ b/app/views/15/pre-sentence-report/electronic-monitoring-for-curfew.html
@@ -24,6 +24,10 @@
                 Essential information</a>
             </li>
             <li class="app-subnav__section-item">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="culpability-and-risk">
+                Culpability and risk</a>
+            </li>
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">
                 Suitability for unpaid work</a>
             </li>
