--- a/app/views/15/pre-sentence-report/suitability-decision-error.html
+++ b/app/views/15/pre-sentence-report/suitability-decision-error.html
@@ -21,6 +21,10 @@
                 Victim impact assessment</a>
             </li>
             <li class="app-subnav__section-item">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="culpability-and-risk">
+                Culpability and risk</a>
+            </li>
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="essential-information">
                 Essential  information</a>
             </li>
