Add write sentencing proposals page
- add page in side nav
- add proposal page
- add accordion to play back notes

--- a/app/views/15/pre-sentence-report/electronic-monitoring-for-curfew.html
+++ b/app/views/15/pre-sentence-report/electronic-monitoring-for-curfew.html
@@ -32,6 +32,10 @@
                 Consider sentence components</a>
             </li>
             <li class="app-subnav__section-item">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="write-sentencing-proposal">
+                Write sentencing proposals</a>
+            </li>
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">
                 Suitability for unpaid work</a>
             </li>
