--- a/app/views/15/pre-sentence-report/consider-sentence-components.html
+++ b/app/views/15/pre-sentence-report/consider-sentence-components.html
@@ -29,6 +29,10 @@
                 Consider sentence components</a>
             </li>
             <li class="app-subnav__section-item">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="write-sentencing-proposal">
+                Write sentencing proposals</a>
+            </li>
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="essential-information">
                 Essential information</a>
             </li>
