Fix incorrect IDs on inputs

--- a/app/views/15/pre-sentence-report/culpability-and-risk.html
+++ b/app/views/15/pre-sentence-report/culpability-and-risk.html
@@ -73,10 +73,10 @@
             Culpability and risk
           </h1>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-l" for="dependant-caring-responsibilities">
+            <h2 class="govuk-heading-l" for="defendant-culpability">
               Culpability
             </h2>
-            <div id="dependant-caring-responsibilities-hint" class="govuk-hint">
+            <div id="defendant-culpability-hint" class="govuk-hint">
               Are there any extenuating circumstances that might make the
               defendant less accountable for their action or inaction?
             </div>
@@ -86,7 +86,6 @@
           <h2 class="govuk-heading-l" for="dependant-caring-responsibilities">
             Risk to others
           </h2>
-
           <div class="govuk-form-group">
             <h3 class="govuk-heading-m" for="dependant-caring-responsibilities">
               Risk of harm to known individuals and partners
@@ -98,55 +97,53 @@
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="dependant-caring-responsibilities">
+            <h3 class="govuk-heading-m" for="defendant-children-risk">
               Risk of harm to children
             </h3>
-            <div id="dependant-caring-responsibilities-hint" class="govuk-hint">
+            <div id="defendant-children-risk-hint" class="govuk-hint">
               What is the risk to children and what circumstances
               could affect this risk?</div>
             <textarea class="govuk-textarea" id="defendant-children-risk" name="defendant-children-risk" rows="8" aria-describedby="defendant-children-risk-hint">{{data['defendant-children-risk']}}</textarea>
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="dependant-caring-responsibilities">
+            <h3 class="govuk-heading-m" for="defendant-public-risk">
               Risk of harm to the public
             </h3>
-            <div id="dependant-caring-responsibilities-hint" class="govuk-hint">
+            <div id="defendant-public-risk-hint" class="govuk-hint">
               What is the risk to the public and what circumstances
               could affect this risk?</div>
             <textarea class="govuk-textarea" id="defendant-public-risk" name="defendant-public-risk" rows="8" aria-describedby="defendant-public-risk-hint">{{data['defendant-public-risk']}}</textarea>
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-          <h2 class="govuk-heading-l" for="dependant-caring-responsibilities">
-            Risk to themselves
-          </h2>
+          <h2 class="govuk-heading-l">Risk to themselves</h2>
           <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="dependant-caring-responsibilities">
+            <h3 class="govuk-heading-m" for="defendant-reconviction-risk">
               Risk of reconviction
             </h3>
-            <div id="dependant-caring-responsibilities-hint" class="govuk-hint">
+            <div id="defendant-reconviction-risk-hint" class="govuk-hint">
               How likely is the defendant to reconvict? What are the
               circumstances that could affect this risk?</div>
             <textarea class="govuk-textarea" id="defendant-reconviction-risk" name="defendant-reconviction-risk" rows="8" aria-describedby="defendant-reconviction-risk-hint">{{data['defendant-reconviction-risk']}}</textarea>
           </div>
           <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="dependant-caring-responsibilities">
+            <h3 class="govuk-heading-m" for="defendant-recidivism-risk">
               Risk of serious recidivism
             </h3>
-            <div id="dependant-caring-responsibilities-hint" class="govuk-hint">
+            <div id="defendant-recidivism-risk-hint" class="govuk-hint">
               How likely is the defendant to engage in serious recidivism? What
               are the circumstances that could affect this risk?</div>
-            <textarea class="govuk-textarea" id="defendant-reconviction-risk" name="defendant-reconviction-risk" rows="8" aria-describedby="defendant-reconviction-risk-hint">{{data['defendant-reconviction-risk']}}</textarea>
+            <textarea class="govuk-textarea" id="defendant-recidivism-risk" name="defendant-recidivism-risk" rows="8" aria-describedby="defendant-recidivism-risk-hint">{{data['defendant-recidivism-risk']}}</textarea>
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
-            <h3 class="govuk-heading-m" for="dependant-caring-responsibilities">
+            <h3 class="govuk-heading-m" for="defendant-self-harm-risk">
               Risk of self harm
             </h3>
-            <div id="dependant-caring-responsibilities-hint" class="govuk-hint">
+            <div id="defendant-self-harm-risk-hint" class="govuk-hint">
               How likely is the defendant to reconvict? What are the
               circumstances that could affect this risk?</div>
-            <textarea class="govuk-textarea" id="defendant-reconviction-risk" name="defendant-reconviction-risk" rows="8" aria-describedby="defendant-reconviction-risk-hint">{{data['defendant-reconviction-risk']}}</textarea>
+            <textarea class="govuk-textarea" id="defendant-self-harm-risk" name="defendant-self-harm-risk" rows="8" aria-describedby="defendant-self-harm-risk-hint">{{data['defendant-self-harm-risk']}}</textarea>
           </div>
           <div class="govuk-button-group">
             <button class="govuk-button" data-module="govuk-button">
