Update content on the preview page
- show things included on the report first
- show notes and working out second
- fix hidden text on links

--- a/app/views/15/pre-sentence-report/write-sentencing-proposal.html
+++ b/app/views/15/pre-sentence-report/write-sentencing-proposal.html
@@ -60,17 +60,15 @@
             <div class="govuk-grid-column-two-thirds">
               <div class="govuk-form-group">
                 <h2 class="govuk-label-wrapper">
-                  <label class="govuk-label govuk-label--l" for="consider-punitive-sentence-component">
+                  <label class="govuk-label govuk-label--l" for="sentencing-proposal">
                     Sentencing proposal
                   </label>
                 </h2>
-                <h2 class="govuk-heading-l" for="dependant-caring-responsibilities">
-                </h2>
-                <div id="consider-punitive-sentence-component-hint" class="govuk-hint">
+                <div id="sentencing-proposal-hint" class="govuk-hint">
                   Create a sentencing proposal based on the all the information
                   you have discovered. View notes made in previous sections to
                   help inform your proposal.</div>
-                <textarea class="govuk-textarea" id="consider-punitive-sentence-component" name="consider-punitive-sentence-component" rows="30" aria-describedby="consider-punitive-sentence-component-hint">{{data['consider-punitive-sentence-component']}}</textarea>
+                <textarea class="govuk-textarea" id="sentencing-proposal" name="sentencing-proposal" rows="30" aria-describedby="sentencing-proposal-hint">{{data['sentencing-proposal']}}</textarea>
               </div>
             </div>
             <div class="govuk-grid-column-one-third">
