Make back to top link less bad

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -5,6 +5,7 @@
 
 // Add extra styles here
 @import "components/app-navigation";
+@import "components/back-to-top";
 @import "components/error-summary";
 @import "components/govuk-layout";
 @import "components/report-preview";
