--- a/app/views/15/pre-sentence-report/culpability-and-risk.html
+++ b/app/views/15/pre-sentence-report/culpability-and-risk.html
@@ -138,17 +138,6 @@
             </button>
           </div>
         </form>
-        <div class="app-back-to-top" data-module="app-back-to-top">
-          <a class="govuk-link govuk-link--no-visited-state app-back-to-top__link"
-            href="#top">
-            <svg role="presentation" focusable="false" class="app-back-to-top__icon"
-              xmlns="http://www.w3.org/2000/svg" width="13" height="17"
-              viewBox="0 0 13 17">
-              <path fill="currentColor" d="M6.5 0L0 6.5 1.4 8l4-4v12.7h2V4l4.3 4L13 6.4z">
-              </path>
-            </svg>Back to top
-          </a>
-        </div>
       </main>
     </div>
     <div class="app-split-pane__supporting-information">
@@ -215,6 +204,13 @@
           </table>
         </div>
       </div>
+    </div>
+    <div class="app-back-to-top app-back-to-top--fixed" data-module="app-back-to-top">
+      <a class="govuk-link govuk-link--no-visited-state app-back-to-top__link" href="#top">
+        <svg role="presentation" focusable="false" class="app-back-to-top__icon" xmlns="http://www.w3.org/2000/svg" width="13" height="17" viewBox="0 0 13 17">
+          <path fill="currentColor" d="M6.5 0L0 6.5 1.4 8l4-4v12.7h2V4l4.3 4L13 6.4z"></path>
+        </svg>Back to top
+      </a>
     </div>
   </div>
 {% endblock %}
