--- a/app/views/15/pre-sentence-report/culpability-and-risk.html
+++ b/app/views/15/pre-sentence-report/culpability-and-risk.html
@@ -143,7 +143,7 @@
     <div class="app-split-pane__supporting-information">
       <div class="govuk-summary-card">
         <div class="govuk-summary-card__title-wrapper">
-          <h2 class="govuk-summary-card__title">OGRS</h2>
+          <h2 class="govuk-summary-card__title">Risk predictors</h2>
         </div>
         <div class="govuk-summary-card__content">
           <table class="govuk-table">
