Remove mention to verification report

--- a/app/views/15/pre-sentence-report/offences.html
+++ b/app/views/15/pre-sentence-report/offences.html
@@ -56,7 +56,7 @@
             Offences
           </h1>
           <p class="govuk-body">This information will be included in the
-            verification report which will be visible to the court and judiciary.</p>
+            report which will be visible to the court and judiciary.</p>
           <details class="govuk-details" data-module="govuk-details">
             <summary class="govuk-details__summary">
               <span class="govuk-details__summary-text">
@@ -66,7 +66,7 @@
             <div class="govuk-details__text">
               <p class="govukl-body">
                 Offences that are not relevant to the hearing or report can be
-                removed by deleting the information from the relevant boxes.
+                removed by deleting them, or editing an offence.
               </p>
             </div>
           </details>
