Add pattern of supervision and supervision response
- create page
- sort routing

--- a/app/views/15/pre-sentence-report/preview-report.html
+++ b/app/views/15/pre-sentence-report/preview-report.html
@@ -892,6 +892,36 @@
                         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
                         <table class="govuk-table">
                           <caption class="govuk-table__caption govuk-table__caption--m">
+                            <h2 class="govuk-heading-m report-heading--purple">
+                              Pattern of offending and repsonse to supervision</h2>
+                          </caption>
+                          <tbody class="govuk-table__body">
+                            <tr class="govuk-table__row">
+                              <th scope="row" class="govuk-table__header">Pattern of offending:</th>
+                              <td class="govuk-table__cell">{{data['pattern-of-offending']}}
+                                <br><a class="govuk-link" href="pattern-of-offending-and-reposonse-to-supervision">
+                                  Change <span class="govuk-visually-hidden">
+                                    pattern of offending notes</span></a>
+                              </td>
+                            </tr>
+                            <tr class="govuk-table__row">
+                              <th scope="row" class="govuk-table__header">Response to supervision:</th>
+                              <td class="govuk-table__cell">{{data['defendant-known-person-risk']}}
+                                <br><a class="govuk-link" href="pattern-of-offending-and-reposonse-to-supervision">
+                                  Change <span class="govuk-visually-hidden">
+                                    Risk of harm to known individuals and partners notes</span></a>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+                    <div class="govuk-grid-row">
+                      <div class="govuk-grid-column-full">
+                        <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+                        <table class="govuk-table">
+                          <caption class="govuk-table__caption govuk-table__caption--m">
                             <h2 class="govuk-heading-m report-heading--purple">Culpability and risk</h2>
                           </caption>
                           <tbody class="govuk-table__body">
