Remove service start page
NDelius screenshot links to defendant details

--- a/app/views/15/pre-sentence-report/index.html
+++ b/app/views/15/pre-sentence-report/index.html
@@ -10,7 +10,7 @@
     }
   </style>
 
-  <a href="start-page">
+  <a href="defendant-details">
     <img src="/public/images/NDelius-report-link.png" alt="Ndelius screen showing details for Dylan Adam Armstrong and a link to his report." style="width:100%;"/>
   </a>
 {% endblock %}
